form, accordion, table, component designed

--- a/partial-files/_grid.scss
+++ b/partial-files/_grid.scss
@@ -17,16 +17,19 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
   padding: 0 20px;
   box-sizing: border-box;
 }
+
 .row {
   display: flex;
   flex-flow: row wrap;
 }
 
 // grid gaps
-@each $key, $val in $grid-gaps {
-  .gap-#{$key} > * {
+@each $key,
+$val in $grid-gaps {
+  .gap-#{$key}>* {
     padding: $val;
   }
+
   .gap-#{$key} {
     margin-left: -$val;
     margin-right: -$val;
@@ -50,6 +53,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
     }
   }
 }
+
 @include sm {
   @for $i from 1 through $grid-columns {
     .col-#{$i}-sm {
@@ -59,6 +63,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
     }
   }
 }
+
 @include md {
   @for $i from 1 through $grid-columns {
     .col-#{$i}-md {
@@ -68,6 +73,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
     }
   }
 }
+
 @include lg {
   @for $i from 1 through $grid-columns {
     .col-#{$i}-lg {
@@ -77,6 +83,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
     }
   }
 }
+
 @include xl {
   @for $i from 1 through $grid-columns {
     .col-#{$i}-xl {
