--- a/partial-files/components/_accordion.scss
+++ b/partial-files/components/_accordion.scss
@@ -1,41 +1,59 @@
-.accordion {
-    background-color: #fff;
-    color: #000;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: 0.4s;
-    margin: 4px 0;
+@mixin accordion-base {
+    .accordion {
+      background-color: #fff;
+      color: #000;
+      cursor: pointer;
+      padding: 18px;
+      width: 100%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+      transition: 0.4s;
+      margin: 4px 0;
+      border-radius: $base-border-radius;
+    }
+    
+    .active, .accordion:hover {
+      background-color: #ddd; 
+      color: #000;
+    }
+    
+    .panel {
+      padding: 20px;
+      display: none;
+      border-radius: $base-border-radius;
+      background-color: #eee;
+      overflow: hidden;
+      transition: max-height 0.2s ease-out;
+    }
+    .accordion:after {
+      content: '\02795'; /* Unicode character for "plus" sign (+) */
+      font-size: 13px;
+      color: #777;
+      float: right;
+      margin-left: 5px;
+    }
+    
+    .active:after {
+      content: "\2796"; /* Unicode character for "minus" sign (-) */
+    }
+}
+
+.accordion-container-shadow{
+  @include accordion-base();
+  .accordion{
     box-shadow: $base-box-shadow;
-    border-radius: $base-border-radius;
   }
+}
   
-  .active, .accordion:hover {
-    background-color: #ddd; 
-    color: #000;
+.accordion-container-bordered{
+  @include accordion-base();
+  .accordion{
+    border: $base-border-thickness solid #ccc;
   }
-  
-  .panel {
-    padding: 20px;
-    display: none;
-    border-radius: $base-border-radius;
-    background-color: #eee;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
+  .panel{
+    border: $base-border-thickness solid #ccc;
   }
-  .accordion:after {
-    content: '\02795'; /* Unicode character for "plus" sign (+) */
-    font-size: 13px;
-    color: #777;
-    float: right;
-    margin-left: 5px;
-  }
-  
-  .active:after {
-    content: "\2796"; /* Unicode character for "minus" sign (-) */
-  }
+}
   
