--- a/partial-files/components/_card.scss
+++ b/partial-files/components/_card.scss
@@ -1,19 +1,40 @@
 @use 'sass:math';
-.card{
+@mixin card-base{
     display: block;
     padding: $base-padding;
-    border: $base-border-thickness solid #ddd;
-    box-shadow: $base-box-shadow;
     border-radius: $base-border-radius;
+    width: fit-content;
+    max-width: 100%;
     .card-title{
         font-size:$font-size-lg;
-        padding-bottom: $base-padding;
+        padding-bottom: $base-padding 0;
         font-weight: bold;
     }
     .card-body{
         font-size: $base-font-size;
+        p,h1,h2,h3,h4,h5,h6{
+            margin-bottom: $base-margin;
+        }
         a{
             text-decoration: underline;
         }
+        button{
+            width: 100%;
+        }
+    }
+}
+
+.card{
+    @include card-base();
+    border: $base-border-thickness solid #ddd;
+    box-shadow: $base-box-shadow;
+}
+
+.card-colored{
+    @include card-base();
+    text-align: center;
+    box-shadow: $base-box-shadow;
+    hr{
+        margin: 10px 0;
     }
 }
