--- a/partial-files/components/_modal.scss
+++ b/partial-files/components/_modal.scss
@@ -1,39 +1,91 @@
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
+    display: none;
+    position: fixed; 
+    z-index: 99999; 
+    padding-top: 100px; 
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
      /* Modal Content */
+
+     @mixin modal-base-content {
+      
+     }
   .modal-content {
+    position: relative;
     background-color: #fefefe;
     margin: auto;
-    padding: 20px;
     border: 1px solid #888;
-    width: 80%;
+    width: fit-content;
+    border-radius: $base-border-radius;
      /* The Close Button */
-  .close {
-    color: #aaaaaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+    .close {
+      color: white;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      position: absolute;
+      top: 0px;
+      right: 0px;
+      border-radius: 0 $base-border-radius 0 0;
+      padding: 0 10px;
+      background: red;
+    }
+    
+    .close:hover,
+    .close:focus {
+      color: #000;
+      text-decoration: none;
+      cursor: pointer;
+    }
+    .modal-content-form{
+      padding: 2rem;
+    }
+    .modal-content-form-icon{
+      display: flex;
+      h3{
+        margin-bottom: $base-margin;
+      }
+      .modal-icon-part{
+        text-align: center;
+        background: #eee;
+        padding:$base-padding;
+        border-radius: $base-border-radius 0 0 $base-border-radius;
+        .icon-group{
+          margin-bottom: $base-margin * 2;
+          img{
+            margin-bottom: $base-margin;
+          }
+        }
+      }
+      .modal-form-part{
+        padding: 2rem;
+      }
+    }
+    .modal-content{
+      background: #8d8888;
+      color: white;
+      width: 100%;
+      border-radius: 0 0 $base-border-radius $base-border-radius;
+      text-align: center;
+      padding: 12px;
+    }
   }
-  
-  .close:hover,
-  .close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
+    
   }
-  }
-  }
+  @media (max-with:768px){
+    .modal-content-form-icon{
+        display: flex;
+        .modal-icon-part{
+            display: flex;
+        }
+    }
+}
   
  
   
