--- a/partial-files/_variables.scss
+++ b/partial-files/_variables.scss
@@ -38,3 +38,15 @@ $font-size-sm: $base-font-size * 0.75;
 $font-size-lg: $base-font-size * 1.5;
 $font-size-xl: $base-font-size * 2;
 $font-size-xxl: $base-font-size * 3;
+
+// section-margin
+$section-margin-xs: 4rem;
+$section-margin-sm: 9rem;
+$section-margin-lg: 12rem;
+$section-margin-xl: 16rem;
+
+// section-padding
+$section-padding-xs: 4rem;
+$section-padding-sm: 9rem;
+$section-padding-lg: 12rem;
+$section-padding-xl: 16rem;
