--- a/scss/style.scss
+++ b/scss/style.scss
@@ -24,7 +24,8 @@
 @import '../partial-files/components/_modal';
 @import '../partial-files/components/_tabs';
 @import '../partial-files/components/_table';
+@import '../partial-files/components/_lightgallery';
 
 //utilities(margin, padding,opacity)
-@import '../partial-files/spacing';
+// @import '../partial-files/spacing';
 
