--- a/partial-files/_grid.scss
+++ b/partial-files/_grid.scss
@@ -49,7 +49,7 @@ $val in $grid-gaps {
     .col-#{$i}-xs {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: ($i * 100%/$grid-columns);
     }
   }
 }
@@ -59,7 +59,7 @@ $val in $grid-gaps {
     .col-#{$i}-sm {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: ($i * 100%/ $grid-columns);
     }
   }
 }
@@ -69,7 +69,7 @@ $val in $grid-gaps {
     .col-#{$i}-md {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: ($i * 100%/ $grid-columns);
     }
   }
 }
@@ -79,7 +79,7 @@ $val in $grid-gaps {
     .col-#{$i}-lg {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: ($i * 100%/ $grid-columns);
     }
   }
 }
@@ -89,7 +89,7 @@ $val in $grid-gaps {
     .col-#{$i}-xl {
       box-sizing: border-box;
       flex-grow: 0;
-      width: math.div($i * 100%, $grid-columns);
+      width: ($i * 100%/ $grid-columns);
     }
   }
 }
