--- a/partial-files/_media_queries.scss
+++ b/partial-files/_media_queries.scss
@@ -1,11 +1,11 @@
 @include md {
     .banner-section{
-        margin-bottom: $section-margin-sm!important;
+        margin-bottom: $section-margin-sm;
         .banner-form-part{
             max-width: 320px;
-            position: absolute!important;
-            top: 10% !important;
-            right: 3% !important;
+            position: absolute;
+            top: 10% ;
+            right: 3% ;
         }
     }
   }
