--- a/partial-files/sections/_cta.scss
+++ b/partial-files/sections/_cta.scss
@@ -1,19 +1,19 @@
-.cta-video-section{
-    .cta-content{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-}
-.cta-section{
-    img{
-        margin-right: $base-margin * 2;
-    }
-    .cta-content{
-        display: flex;
-        align-items: center;
-        p{
-            margin-bottom: $base-margin;
-        }
-    }
-}
+// .cta-video-section{
+//     .cta-content{
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//     }
+// }
+// .cta-section{
+//     img{
+//         margin-right: $base-margin * 2;
+//     }
+//     .cta-content{
+//         display: flex;
+//         align-items: center;
+//         p{
+//             margin-bottom: $base-margin;
+//         }
+//     }
+// }
