--- a/partial-files/components/_accordion.scss
+++ b/partial-files/components/_accordion.scss
@@ -3,14 +3,14 @@
       background-color: #fff;
       color: #000;
       cursor: pointer;
-      padding: 18px;
+      padding: $base-padding * 1.5;
       width: 100%;
       border: none;
       text-align: left;
       outline: none;
-      font-size: 15px;
+      font-size: $base-font-size;
       transition: 0.4s;
-      margin: 4px 0;
+      margin: $base-margin 0;
       border-radius: $base-border-radius;
     }
     
@@ -20,7 +20,7 @@
     }
     
     .panel {
-      padding: 20px;
+      padding: $base-padding * 2;
       display: none;
       border-radius: $base-border-radius;
       background-color: #eee;
@@ -29,10 +29,10 @@
     }
     .accordion:after {
       content: '\02795'; /* Unicode character for "plus" sign (+) */
-      font-size: 13px;
+      font-size: $base-font-size;
       color: #777;
       float: right;
-      margin-left: 5px;
+      margin-left: $base-margin * 0.5;
     }
     
     .active:after {
