--- a/partial-files/components/_carousel.scss
+++ b/partial-files/components/_carousel.scss
@@ -1,13 +1,12 @@
-$carousel-height: 250px;
-$control-size: 50px;
+$carousel-height: 25rem;
+$control-size: 5rem;
 
 .carousel {
   width:100%;
   height: $carousel-height;
-  border-radius: 3px;
+  border-radius: $base-border-radius;
   overflow: hidden;
   position: relative;
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
   
   .controls {
     opacity: 1;
@@ -21,12 +20,12 @@ $control-size: 50px;
     transition: all ease 0.5s;
     
     .control {
-      margin: 0 5px;
+      margin: 0 $base-margin;
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 40px;
-      width: 40px;
+      height: 3rem;
+      width: 3rem;
       border-radius: 50%;
       background-color: rgba(255, 255, 255, 0.7);
       opacity: .5;
