--- a/partial-files/components/_modal.scss
+++ b/partial-files/components/_modal.scss
@@ -3,7 +3,7 @@
     display: none;
     position: fixed; 
     z-index: 99999; 
-    padding-top: 100px; 
+    padding-top: 10rem; 
     left: 0;
     top: 0;
     width: 100%;
@@ -12,28 +12,24 @@
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
      /* Modal Content */
-
-     @mixin modal-base-content {
-      
-     }
   .modal-content {
     position: relative;
     background-color: #fefefe;
     margin: auto;
-    border: 1px solid #888;
+    border: $base-border-thickness solid #888;
     width: fit-content;
     border-radius: $base-border-radius;
      /* The Close Button */
     .close {
       color: white;
       float: right;
-      font-size: 28px;
+      font-size: $font-size-xl;
       font-weight: bold;
       position: absolute;
-      top: 0px;
-      right: 0px;
+      top: 0;
+      right: 0;
       border-radius: 0 $base-border-radius 0 0;
-      padding: 0 10px;
+      padding: 0 $base-padding;
       background: red;
     }
     
@@ -73,21 +69,11 @@
       width: 100%;
       border-radius: 0 0 $base-border-radius $base-border-radius;
       text-align: center;
-      padding: 12px;
+      padding: $base-padding;
     }
+  } 
   }
-    
-  }
-  @media (max-width:768px){
-    .modal-content-form-icon{
-        flex-direction: column-reverse;
-        .modal-icon-part{
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-        }
-    }
-}
+
   
  
   
