--- a/partial-files/components/_navbar.scss
+++ b/partial-files/components/_navbar.scss
@@ -6,13 +6,13 @@
 .simple-navbar{
     @include navbar-base();
     .nav-logo{
-        width: 100px;
+        width: 6rem;
     }
     .navbar-content{
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: $base-padding * 2;
+        padding: $base-padding ;
     }
 }
 
