--- a/partial-files/components/_table.scss
+++ b/partial-files/components/_table.scss
@@ -25,11 +25,11 @@
     width: 100%;
     .table-rounded{
         @include table();
-        padding: 0px;
+        padding: 0;
     }
     .table-rounded-bordered{
         @include table();
-        padding: 0px;
+        padding: 0;
         th,td{
             border-bottom: $base-border-thickness solid white;
             border-right: $base-border-thickness solid white;
@@ -58,8 +58,3 @@
     // }
 }
 
-@media (max-width:442px) {
-    th,td{
-        padding: math.div($base-padding, 3)!important;
-    }
-}
