--- a/partial-files/components/_tabs.scss
+++ b/partial-files/components/_tabs.scss
@@ -1,7 +1,7 @@
 /* Style the tab */
 .tab {
     overflow: hidden;
-    border: 1px solid #ccc;
+    border: $base-border-thickness solid #ccc;
     background-color: #f1f1f1;
     padding: $base-padding;
     border-radius: $base-border-radius $base-border-radius 0 0;
@@ -13,9 +13,9 @@
         border: none;
         outline: none;
         cursor: pointer;
-        padding: 14px 16px;
+        padding: $base-padding;
         transition: 0.3s;
-        font-size: 17px;
+        font-size: $base-font-size;
       }
       button:hover {
         background-color: #ccc;
@@ -33,7 +33,7 @@
   .tabcontent {
     display: none;
     padding:$base-padding;
-    border: 1px solid #ccc;
+    border: $base-border-thickness solid #ccc;
     border-top: none;
     border-radius: 0 0 $base-border-radius $base-border-radius;
     box-shadow: $base-box-shadow;
