changes math div

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,7 +31,7 @@
 @import '../partial-files/components/floating_btn';
 
 //utilities(margin, padding,opacity)
-@import '../partial-files/spacing';
+// @import '../partial-files/spacing';
 
 
 // sections start
