--- a/partial-files/components/_button.scss
+++ b/partial-files/components/_button.scss
@@ -3,7 +3,7 @@
         cursor: pointer;
         display: inline-block;
         border: 0;
-        padding: $base-padding $base-padding*2;
+        padding: $base-padding*2;
         border-radius: $base-border-radius;
         background: $bg-color;
 }
