--- a/partial-files/_setting.scss
+++ b/partial-files/_setting.scss
@@ -1,5 +1,8 @@
+$font-base: 16px;
+@function rem-calc($pixel) {
+  $rem: $pixel / $font-base;
+  @return #{$rem}rem;
+}
 html{
-    // font-size:16px; 
-    // font-size: 62.5%; 
     font-size: rem-calc(10px);
 }
