--- a/partial-files/sections/_floorplan.scss
+++ b/partial-files/sections/_floorplan.scss
@@ -4,8 +4,11 @@
             position: relative;
             width: 100%;
             border-radius: 3px;
-            // box-shadow: rgb(0 0 0 / 16%) 0 1px 4px;
-            background: rgba(32,20,122,.4);
+            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+            background: #ccc
+        }
+        .floorplan-img:hover .btn.overlay{
+            opacity: 1;
         }
     }
 }
