--- a/scss/style.css
+++ b/scss/style.css
@@ -3690,6 +3690,32 @@ section {
   cursor: pointer;
 }
 
+.btn.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  background-color: #4b4f5075;
+}
+
+.btn.overlay .btn.center-align {
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 @use 'sass:math';
 .card {
   display: block;
@@ -6249,13 +6275,6 @@ section {
   border-radius: 50%;
 }
 
-.floorplan-section .floorplan-content .floorplan-img {
-  position: relative;
-  width: 100%;
-  border-radius: 3px;
-  background: rgba(32, 20, 122, 0.4);
-}
-
 .main-title {
   text-align: center;
   margin-bottom: 2rem;
@@ -6288,6 +6307,19 @@ section {
 
 .footer-section {
   text-align: center;
+}
+
+.floorplan-section .floorplan-content .floorplan-img {
+  position: relative;
+  width: 100%;
+  border-radius: 3px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+          box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: #ccc;
+}
+
+.floorplan-section .floorplan-content .floorplan-img:hover .btn.overlay {
+  opacity: 1;
 }
 
 @media (min-width: 768px) {
