--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,6 +29,7 @@
 @import '../partial-files/components/responsive_table';
 @import '../partial-files/components/auto_slider';
 @import '../partial-files/components/floating_btn';
+@import '../partial-files/components/text_animations';
 
 //utilities(margin, padding,opacity)
 @import '../partial-files/spacing';
@@ -39,6 +40,8 @@
 @import '../partial-files/sections/banner';
 @import '../partial-files/sections/overview';
 @import '../partial-files/sections/cta';
+@import '../partial-files/sections/floorplan';
+@import '../partial-files/sections/video';
 @import '../partial-files/sections/footer';
 
 
