--- a/partial-files/components/_accordion.scss
+++ b/partial-files/components/_accordion.scss
@@ -10,7 +10,7 @@
       outline: none;
       font-size: $base-font-size;
       transition: 0.4s;
-      margin: $base-margin 0;
+      margin: 0;
       border-radius: $base-border-radius;
     }
     
