--- a/scss/style.css
+++ b/scss/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 html {
-  font-size: 0.625rem;
+  font-size: 1rem;
 }
 
 * {
@@ -3439,7 +3439,30 @@ section {
   cursor: pointer;
 }
 
+.btn.overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 0.5s ease;
+  background-color: rgba(75, 79, 80, 0.4588235294);
+}
+.btn.overlay .btn.center-align {
+  transition: 0.5s ease;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 .card {
+  position: relative;
   display: block;
   padding: 1rem;
   border-radius: 0.5rem;
@@ -3460,7 +3483,7 @@ section {
   width: 3.75rem;
   height: 3.75rem;
   margin: 0 auto;
-  margin-top: -9rem;
+  margin-top: -2.7rem;
   margin-bottom: 1rem;
   border-radius: 50%;
   padding: 1.5rem;
@@ -3486,6 +3509,7 @@ section {
 }
 
 .card-colored {
+  position: relative;
   display: block;
   padding: 1rem;
   border-radius: 0.5rem;
@@ -3506,7 +3530,7 @@ section {
   width: 3.75rem;
   height: 3.75rem;
   margin: 0 auto;
-  margin-top: -9rem;
+  margin-top: -2.7rem;
   margin-bottom: 1rem;
   border-radius: 50%;
   padding: 1.5rem;
@@ -6008,7 +6032,7 @@ section {
   outline: none;
   font-size: 1rem;
   transition: 0.4s;
-  margin: 1rem 0;
+  margin: 0;
   border-radius: 0.5rem;
 }
 .accordion-container-shadow .active, .accordion-container-shadow .accordion:hover {
@@ -6048,7 +6072,7 @@ section {
   outline: none;
   font-size: 1rem;
   transition: 0.4s;
-  margin: 1rem 0;
+  margin: 0;
   border-radius: 0.5rem;
 }
 .accordion-container-bordered .active, .accordion-container-bordered .accordion:hover {
@@ -6597,6 +6621,100 @@ section {
   border-radius: 50%;
 }
 
+/* use class="blink" */
+@-webkit-keyframes blinker {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0.2;
+  }
+}
+.blink {
+  text-decoration: blink;
+  -webkit-animation: blinker 1s infinite ease-in-out alternate;
+}
+
+/* use class="color-change" */
+@-webkit-keyframes color-change {
+  0% {
+    color: black;
+  }
+  25% {
+    color: red;
+  }
+  50% {
+    color: yellow;
+  }
+  75% {
+    color: blue;
+  }
+  100% {
+    color: green;
+  }
+}
+.color-change {
+  text-decoration: blink;
+  -webkit-animation: color-change 3s infinite ease-in-out alternate;
+}
+
+/* use class="bg-change" */
+@-webkit-keyframes bg-change {
+  0% {
+    background-color: black;
+  }
+  25% {
+    background-color: red;
+  }
+  50% {
+    background-color: yellow;
+  }
+  75% {
+    background-color: blue;
+  }
+  100% {
+    background-color: green;
+  }
+}
+.bg-change {
+  text-decoration: blink;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  -webkit-animation: bg-change 3s infinite ease-in-out alternate;
+}
+
+/* use class="zoom-in" */
+@-webkit-keyframes zoom {
+  0% {
+    font-size: 1rem;
+  }
+  100% {
+    font-size: 1.2rem;
+  }
+}
+.zoom {
+  text-decoration: blink;
+  -webkit-animation: zoom 2s infinite ease-in-out alternate;
+}
+
+/* use class="elastic" */
+@-webkit-keyframes elastic {
+  0% {
+    font-size: 1rem;
+  }
+  50% {
+    font-size: 1.2rem;
+  }
+  100% {
+    font-size: 1rem;
+  }
+}
+.elastic {
+  text-decoration: blink;
+  -webkit-animation: elastic 3s infinite ease-in-out alternate;
+}
+
 .p-0 {
   padding: 0;
 }
@@ -6966,6 +7084,22 @@ section {
 
 .overview-section .overview-content img {
   border-radius: 0.5rem;
+}
+
+.floorplan-section .floorplan-content .floorplan-img {
+  position: relative;
+  width: 100%;
+  border-radius: 3px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  background: #ccc;
+}
+.floorplan-section .floorplan-content .floorplan-img:hover .btn.overlay {
+  opacity: 1;
+}
+
+.video-section .video-content .video-card {
+  display: flex;
+  justify-content: center;
 }
 
 .footer-section {
