--- a/partial-files/components/_table.scss
+++ b/partial-files/components/_table.scss
@@ -2,6 +2,7 @@
 
 @mixin table{
     width: 100%;
+    font-size: $font-size-lg;
     padding: $base-padding;
     th,td{
         padding: $base-padding;
