--- a/partial-files/sections/_banner.scss
+++ b/partial-files/sections/_banner.scss
@@ -11,7 +11,7 @@
         .banner-form-title{
             text-align: center;
             padding: $base-padding;
-            font-size: $base-font-size;
+            font-size: $font-size-lg;
         }
     }
 }
