--- a/partial-files/sections/_overview.scss
+++ b/partial-files/sections/_overview.scss
@@ -1,5 +1,6 @@
 .overview-section{
     .overview-content{
+        font-size: $font-size-lg;
         img{
             border-radius: $base-border-radius;
         }
