--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,6 +30,7 @@
 @import '../partial-files/components/auto_slider';
 @import '../partial-files/components/floating_btn';
 @import '../partial-files/components/text_animations';
+@import '../partial-files/components/clip_path';
 
 //utilities(margin, padding,opacity)
 @import '../partial-files/spacing';
@@ -42,6 +43,8 @@
 @import '../partial-files/sections/cta';
 @import '../partial-files/sections/floorplan';
 @import '../partial-files/sections/video';
+@import '../partial-files/sections/about_developer';
+@import '../partial-files/sections/location';
 @import '../partial-files/sections/footer';
 
 
