--- a/partial-files/_variables.scss
+++ b/partial-files/_variables.scss
@@ -37,7 +37,7 @@ $base-border-thickness : 0.01rem;
 $base-border-radius : calc($base-font-size / 2);
 
 //box-shadow
-$base-box-shadow : 1px 3px 5px rgba(0,0,0,0.1);
+$base-box-shadow : 0.1rem 0.3rem 0.5rem rgba(0,0,0,0.1);
 
 
 // section-margin
