--- a/partial-files/components/_button.scss
+++ b/partial-files/components/_button.scss
@@ -30,6 +30,15 @@
             transition: 0.3s ease;
         }
     }
+    .btn-sharp-#{$key}{
+        @include btn($val);
+        border-radius: 0 ;
+        &:hover{
+            background-color: lighten($val, 5);
+            color: #fff;
+            transition: 0.3s ease;
+        }
+    }
     .btn-outlined-#{$key}{
         @include btn(#fff);
         border: $base-border-thickness solid $val;
@@ -43,6 +52,16 @@
         @include btn(#fff);
         border: $base-border-thickness solid $val;
         border-radius:  $base-border-radius * 5;
+        &:hover{
+            background-color: $val;
+            color: white;
+            transition: 0.3s ease;
+        }
+    }
+    .btn-sharp-outlined-#{$key}{
+        @include btn(#fff);
+        border: $base-border-thickness solid $val;
+        border-radius: 0;
         &:hover{
             background-color: $val;
             color: white;
