--- a/partial-files/components/_form.scss
+++ b/partial-files/components/_form.scss
@@ -5,13 +5,13 @@
     .form-title{
         text-align: center;
         margin-bottom: $base-margin;
-        font-size:$base-font-size;
+        font-size:$font-size-lg;
     }
     .form-input{
         width: 100%;
         padding:$base-padding;
         border-radius:$base-border-radius;
-        font-size: $base-font-size;
+        font-size: $font-size-lg;
     }
     .form-phone-group{
         display: flex;
@@ -23,7 +23,7 @@
         width: 100%;
     }
     ::placeholder{
-        font-size: $base-font-size;
+        font-size: $font-size-lg;
     }
 }
 
