price hover cards and popup added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -48,5 +48,8 @@
 @import '../partial-files/sections/footer';
 
 
+// section variation start
+@import '../partial-files/section-variation/priceplan';
+
 
 @import '../partial-files/media_queries';
