--- a/partial-files/_media_queries.scss
+++ b/partial-files/_media_queries.scss
@@ -11,7 +11,7 @@
     .banner-section{
         margin-bottom: $section-margin-sm;
         .banner-form-part{
-            max-width: 32rem;
+            max-width: 25vw;
             position: absolute;
             top: 10% ;
             right: 3% ;
