--- a/partial-files/section-variation/_priceplan.scss
+++ b/partial-files/section-variation/_priceplan.scss
@@ -1,4 +1,3 @@
-
 // type 1
 
 .price-card-type1 {
@@ -6,6 +5,9 @@
     background: #ffffff;
     box-shadow: $base-box-shadow;
     padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: 0.01rem solid rgb(221, 221, 221);
+    position: relative;
     .card-img {
         img {
             border-radius: 0;
@@ -48,55 +50,75 @@
 .price-card-list {
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    gap: 1rem;
     .price-item-card {
+        width:100%;
         .price-card-type2 {
             background: #ffffff;
             box-shadow: $base-box-shadow;
-            width: 256px;
-            border: 1px solid #ccc;
             text-align: center;
-            height: 250px;
-            border: 1px solid #e7e7e7;
-            .price-content {
+            display: flex;
+            justify-content: space-between;
+            border-radius: 0.5rem;
+            border: 0.01rem solid rgb(221, 221, 221);
+            flex-direction: column-reverse;
+            .price-card-img {
+                padding: 2rem;
+                width: 100%;
+                position: relative;
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+                i {
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    color: #fff;
+                }
+            }
+            .price-item {
+                padding: 2rem;
                 display: flex;
-                justify-content: space-between;
+                flex-direction: column;
+                gap: 20px;
+                width: 100%;
+                .price-list {
+                    display: flex;
+                    justify-content: space-around;
+                }
+            }
+        }
+    }
+}
+
+
+// responsive code
+
+
+@include md{
+    .price-card-list {
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        .price-item-card {
+            width:25%;
+            .price-card-type2 {
+                flex-direction: unset;
                 .price-card-img {
                     display: none;
-                    padding: 2rem;
-                    width: 100%;
-                    position: relative;
-                    img {
-                        width: 100%;
-                        height: 100%;
-                    }
-                    i {
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                        color: #fff;
-                    }
-                }
-                .price-item {
-                    padding: 2rem;
-                    display: flex;
-                    flex-direction: column;
-                    gap: 20px;
-                    width: 100%;
-                    .price-list {
-                        display: flex;
-                        justify-content: space-around;
-                    }
                 }
             }
         }
-    }
-    .price-item-card.active-price-card {
-        .price-card-type2 {
-            width: 500px;
-            .price-card-img {
-                display: block !important;
+        .price-item-card.active-price-card {
+            width: 40%;
+            .price-card-type2 {
+                .price-card-img {
+                    display: block !important;
+                }
             }
         }
-    }
+    } 
 }
