amenities variations added

--- a/partial-files/components/_clip_path.scss
+++ b/partial-files/components/_clip_path.scss
@@ -16,6 +16,9 @@
 .clip-hexagon{
     clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
 }
+.clip-hexagon-sharp-top{
+    clip-path: polygon(50% 0, 100% 25%, 100% 75%, 50% 100%, 0 75%, 0 25%);
+}
 .clip-heptagon{
     clip-path: polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%);
 }
