--- a/scss/style.scss
+++ b/scss/style.scss
@@ -50,6 +50,7 @@
 
 // section variation start
 @import '../partial-files/section-variation/priceplan';
+@import '../partial-files/section-variation/amenities_var';
 
 
 @import '../partial-files/media_queries';
