--- a/partial-files/components/_responsive_table.scss
+++ b/partial-files/components/_responsive_table.scss
@@ -51,7 +51,7 @@
           border-bottom: $base-border-thickness solid #ddd;
           display: block;
           font-size: $font-size-lg;
-          text-align: right;
+          text-align: center;
         }
         
          td::before {
