--- a/partial-files/section-variation/_amenities_var.scss
+++ b/partial-files/section-variation/_amenities_var.scss
@@ -1,23 +1,20 @@
   /* amenities type 1 */
-.amenities-type1{
+.amenities-card1{
     .card{
-        background-image: url('../img/card-bg.webp');
         background-repeat: no-repeat;
         background-size: cover;
-    }
-    .card-img img{
-            width: 6rem;
     }
 }
 
   /* amenities type 2 */
-.amenities-type2{
+.amenities-card2{
     .card{
         .card-img{
             transform: translateY(-6rem);
-            max-width: 10rem;
+            width: 10rem;
+            height: 10rem;
             margin: 0 auto;
-            padding: 3rem;
+            padding:4rem;
             box-shadow: $base-box-shadow;
         }
         .card-body{
@@ -27,8 +24,34 @@
 }
 
   /* amenities type 3 */
-  .amenities-type3{
-    .amenities-card{
-        border: $base-border-thickness solid white;
+  .amenities-card3{
+    .card-plain{
+        border-radius: 0;
+        .card-img{
+            width: 10rem;
+            height: 10rem;
+            border-radius: 50%;
+            margin: 0 auto;
+            .card-icon{
+                padding: 38%;
+            }
+        }
+    }
+}
+
+  /* amenities type 4 */
+  .amenities-card4{
+    .card-colored{
+        .card-img{
+            width: 6rem;
+            height: 6rem;
+            border-radius: 50%;
+            padding: 1.8rem;
+            margin: 0 auto;
+            transform: translateY(-4rem);
+        }
+        .card-title{
+            margin: -3rem 0 1rem 0;
+        }
     }
 }
