--- a/partial-files/section-variation/_priceplan.scss
+++ b/partial-files/section-variation/_priceplan.scss
@@ -98,7 +98,7 @@
 // responsive code
 
 
-@include md{
+@include lg{
     .price-card-list {
         display: flex;
         justify-content: space-between;
