--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,7 @@
 @import '../partial-files/components/floating_btn';
 @import '../partial-files/components/text_animations';
 @import '../partial-files/components/clip_path';
+@import '../partial-files/components/speeddial';
 
 //utilities(margin, padding,opacity)
 @import '../partial-files/spacing';
