--- a/partial-files/components/_modal.scss
+++ b/partial-files/components/_modal.scss
@@ -1,17 +1,17 @@
 /* The Modal (background) */
 .modal {
-    display: none;
-    position: fixed; 
-    z-index: 99999; 
-    padding-top: 10rem; 
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%; 
-    overflow: auto; 
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
-     /* Modal Content */
+  display: none;
+  position: fixed;
+  z-index: 99999;
+  padding-top: 10rem;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Modal Content */
   .modal-content {
     position: relative;
     background-color: #fefefe;
@@ -19,7 +19,7 @@
     border: $base-border-thickness solid #888;
     width: fit-content;
     border-radius: $base-border-radius;
-     /* The Close Button */
+    /* The Close Button */
     .close {
       color: white;
       float: right;
@@ -32,38 +32,38 @@
       padding: 0 $base-padding;
       background: red;
     }
-    
+
     .close:hover,
     .close:focus {
       color: #000;
       text-decoration: none;
       cursor: pointer;
     }
-    .modal-content-form{
+    .modal-content-form {
       padding: 2rem;
     }
-    .modal-content-form-icon{
+    .modal-content-form-icon {
       display: flex;
-      h3{
+      h3 {
         margin-bottom: $base-margin;
       }
-      .modal-icon-part{
+      .modal-icon-part {
         text-align: center;
         background: #eee;
-        padding:$base-padding;
+        padding: $base-padding;
         border-radius: $base-border-radius 0 0 $base-border-radius;
-        .icon-group{
+        .icon-group {
           margin-bottom: $base-margin * 2;
-          img{
+          img {
             margin-bottom: $base-margin;
           }
         }
       }
-      .modal-form-part{
+      .modal-form-part {
         padding: 2rem;
       }
     }
-    .modal-content{
+    .modal-content {
       background: #8d8888;
       color: white;
       width: 100%;
@@ -71,10 +71,44 @@
       text-align: center;
       padding: $base-padding;
     }
-  } 
   }
+}
 
-  
- 
-  
- 
+// popup modal
+
+.modal.popup-modal {
+  .modal-content {
+    width:90%;
+    .popup-container {
+      display: flex;
+      flex-direction: column;
+      .pop-img {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@include md {
+  .modal.popup-modal {
+    .modal-content {
+      width: 60vw;
+      height: 60vh;
+      display: flex;
+      .popup-container {
+        display: flex;
+        flex-direction: row;
+        .pop-img {
+          width: 50%;
+          img {
+            width: 100%;
+            height: 100%;
+          }
+        }
+        .modal-content-form{
+          width: 50%;
+        }
+      }
+    }
+  }
+}
