--- a/partial-files/components/_accordion.scss
+++ b/partial-files/components/_accordion.scss
@@ -106,3 +106,42 @@
     color: #7f8c8d;
   }
 }
+
+// type 3
+
+.accordion {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	row-gap: 1rem;
+
+	&__item {
+		padding: 1rem;
+		background: #eee;
+		position: relative;
+		border-radius: 10px;
+		width: 100%;
+		cursor: pointer;
+
+		&:after {
+			position: absolute;
+			right: 1rem;
+			content: "+";
+			font-size: 24px;
+			top: 1rem;
+		}
+
+		&.open:after {
+			content: "-";
+		}
+
+		p {
+			margin-top: 1rem;
+		}
+
+		&:not(.open) p {
+			display: none;
+		}
+	}
+}
