navbar,banner section added

--- a/partial-files/components/_modal.scss
+++ b/partial-files/components/_modal.scss
@@ -19,6 +19,7 @@
     border: $base-border-thickness solid #888;
     width: fit-content;
     border-radius: $base-border-radius;
+    max-width: 44rem;
      /* The Close Button */
     .close {
       color: white;
