--- a/partial-files/components/_navbar.scss
+++ b/partial-files/components/_navbar.scss
@@ -1,13 +1,6 @@
 @mixin navbar-base {
     box-shadow: $base-box-shadow;
     z-index: 999;
-}
-
-.simple-navbar{
-    @include navbar-base();
-    .nav-logo{
-        width: 12rem;
-    }
     .navbar-content{
         display: flex;
         justify-content: space-between;
@@ -16,7 +9,18 @@
         .nav-links{
             font-size: $font-size-lg;
         }
+        .nav-logo{
+            width: 12rem;
+        }
     }
+    .navbar-content-centered{
+        @extend .navbar-content;
+        justify-content: center;
+    }
+}
+
+.simple-navbar{
+    @include navbar-base();
 }
 
 .simple-navbar-fixed{
