--- a/partial-files/sections/_overview.scss
+++ b/partial-files/sections/_overview.scss
@@ -2,6 +2,7 @@
     .overview-content{
         img{
             border-radius: $base-border-radius;
+            width: 100%;
         }
     }
 }
