--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,6 +46,7 @@
 @import '../partial-files/sections/about_developer';
 @import '../partial-files/sections/location';
 @import '../partial-files/sections/footer';
+@import '../partial-files/sections/thankyou';
 
 
 // section variation start
