--- a/partial-files/section-variation/_priceplan.scss
+++ b/partial-files/section-variation/_priceplan.scss
@@ -70,13 +70,13 @@
                 img {
                     width: 100%;
                     height: 100%;
+                    filter: blur(0.2rem);
                 }
                 i {
                     position: absolute;
                     top: 50%;
                     left: 50%;
                     transform: translate(-50%, -50%);
-                    color: #fff;
                 }
             }
             .price-item {
