--- a/partial-files/sections/_banner.scss
+++ b/partial-files/sections/_banner.scss
@@ -1,6 +1,5 @@
 .banner-section{
     position: relative;
-    margin-bottom: $section-margin-xs;
     img{
         width: 100%;
     }
@@ -9,7 +8,9 @@
         width: 100%;
         position: static;
         .banner-form-title{
-            text-align: center;
+            padding: $base-padding;
+        }
+        .banner-form-offers{
             padding: $base-padding;
         }
     }
