--- a/partial-files/sections/_location.scss
+++ b/partial-files/sections/_location.scss
@@ -2,6 +2,10 @@
     img{
         border-radius: $base-border-radius;
     }
+    iframe{
+        border-radius: $base-border-radius;
+        box-shadow: $base-box-shadow;
+    }
     .location-content{
         font-size: $font-size-lg;
     }
