--- a/partial-files/_media_queries.scss
+++ b/partial-files/_media_queries.scss
@@ -9,6 +9,7 @@
         margin-bottom: $section-margin-sm;
     }
     .banner-section{
+        margin-bottom: $section-margin-sm;
         .banner-form-part{
             max-width: 25vw;
             position: absolute;
