--- a/partial-files/_global.scss
+++ b/partial-files/_global.scss
@@ -1,3 +1,4 @@
+// positions start
 .fixed{
     position: fixed;
     top: 0;
@@ -8,19 +9,55 @@
     top: 0;
     left: 0;
 }
+// positions end
+
+//text aligns start
 .text-center{
     text-align: center;
 }
+.text-left{
+    text-align: left;
+}
+.text-right{
+    text-align: right;
+}
+.text-justify{
+    text-align: justify;
+}
+//text aligns end
+
+// section spacings start
 section{
     margin-bottom: $section-margin-xs;
 }
+// section spacings end
 
+// device visibility start
 .deskBlock{
     display: none;
 }
 .mobBlock{
     display: block;
 }
+// device visibility end
+
+// font-weight start
 .font-bold{
     font-weight: bold;
 }
+.font-300{
+    font-weight: 300;
+}
+.font-300{
+    font-weight: 300;
+}
+.font-400{
+    font-weight: 300;
+}
+.font-500{
+    font-weight: 300;
+}
+.font-600{
+    font-weight: 300;
+}
+// font-weight end
