--- a/partial-files/_grid.scss
+++ b/partial-files/_grid.scss
@@ -3,9 +3,9 @@
 $grid-columns: 12;
 $grid-gaps: (
   "0": 0,
-  "1": 1rem,
-  "2": 2rem,
-  "3": 3rem,
+  "1": 10px,
+  "2": 20px,
+  "3": 30px,
 );
 $layout-values: flex-start, flex-end, center, space-between, space-around;
 
@@ -18,6 +18,15 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
   box-sizing: border-box;
 }
 
+.container-fluid {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
 .row {
   display: flex;
   flex-flow: row wrap;
@@ -27,7 +36,7 @@ $layout-values: flex-start, flex-end, center, space-between, space-around;
 @each $key,
 $val in $grid-gaps {
   .gap-#{$key}>* {
-    padding: $val;
+    padding: 0 $val;
   }
 
   .gap-#{$key} {
@@ -35,6 +44,8 @@ $val in $grid-gaps {
     margin-right: -$val;
   }
 }
+
+
 
 // justify content classes
 @each $val in $layout-values {
