--- a/partial-files/components/_accordion.scss
+++ b/partial-files/components/_accordion.scss
@@ -67,32 +67,28 @@
     display: block;
     width: 100%;
     box-sizing: border-box;
-    font-family: "Open-sans", Arial, sans-serif;
   }
   .accordionItemHeading {
     cursor: pointer;
-    margin: 0px 0px 10px 0px;
-    padding: 10px;
-    background: #2980b9;
-    color: #fff;
+    margin: 0 0 1rem 0;
+    padding: $base-padding;
     width: 100%;
-    -webkit-border-radius: 3px;
-    border-radius: 3px;
+    -webkit-border-radius: $base-border-radius;
+    border-radius: $base-border-radius;
     box-sizing: border-box;
   }
   .close .accordionItemContent {
-    height: 0px;
+    height: 0;
     transition: height 1s ease-out;
     transform: scaleY(0);
     float: left;
     display: block;
   }
   .open .accordionItemContent {
-    padding: 20px;
-    background-color: #fff;
+    padding:$base-padding * 2;
     border: 1px solid #ddd;
     width: 100%;
-    margin: 0px 0px 10px 0px;
+    margin: 0 0 $base-margin 0;
     display: block;
     transition: transform 0.4s ease;
     box-sizing: border-box;
@@ -100,10 +96,8 @@
 
   .open .accordionItemHeading {
     margin: 0px;
-    border-bottom-right-radius: 0px;
-    border-bottom-left-radius: 0px;
-    background-color: #bdc3c7;
-    color: #7f8c8d;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
   }
 }
 
@@ -120,7 +114,7 @@
 		padding: 1rem;
 		background: #eee;
 		position: relative;
-		border-radius: 10px;
+		border-radius: $base-border-radius;
 		width: 100%;
 		cursor: pointer;
 
@@ -128,7 +122,7 @@
 			position: absolute;
 			right: 1rem;
 			content: "+";
-			font-size: 24px;
+			font-size: 2.4rem;
 			top: 1rem;
 		}
 
